# soda-platform

./: CLAUDE.md  Dockerfile.api  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  pytest.yml
migrations/marketing/: __init__.py
modules/auth/: README.md  api.py  decoraters.py  url_utils.py
modules/bot/discord_modules/: bot.py
modules/calendar/: api.py  service.py
modules/marketing/: api.py  models.py  selenium.py  service.py
modules/merch/: api.py  models.py
modules/organizations/: api.py  models.py
modules/points/: api.py  models.py
modules/public/: api.py
modules/superadmin/: README.md  api.py
modules/users/: api.py
web/: package-lock.json  package.json
web/src/: App.js  config.js
web/src/components/: editProductModal.js
web/src/components/points/: api.js
web/src/components/shared/: OrganizationNavbar.jsx
web/src/components/superadmin/: OAuthManager.js  OAuthSummary.js
web/src/components/utils/: axios.js
web/src/hooks/: useOrgNavigation.js
web/src/pages/: AddMerchandisePage.js  AddPoints.js  HomePage.js  LeaderBoard.js  LoginPage.js  MemberLoginPage.js  MemberStorePage.js  MerchandiseDashboard.js  SuperAdmin.js  TransactionsPage.js  UserPage.js
