[project]
name = "soda-platform"
version = "0.1.0"
description = "SoDA Platform"
authors = [{name = "SoDA", email = "asu@thesoda.io"}]
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "aiosignal==1.3.1",
    "asgiref==3.9.1",
    "async-timeout==4.0.3",
    "attrs==23.1.0",
    "bidict==0.23.1",
    "blinker==1.9.0",
    "cachetools==5.3.2",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "dnspython==2.6.1",
    "flask==3.0.0",
    "flask-cors==6.0.0",
    "flask-discord==0.1.69",
    "flask-socketio==5.3.6",
    "flask-sqlalchemy==3.1.1",
    "frozenlist==1.7.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "idna==3.7",
    "importlib-metadata==6.8.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "multidict>=6.3.2",
    "nest-asyncio==1.5.8",
    "oauthlib==3.3.1",
    "py-cord>=2.6.1",
    "pyjwt==2.8.0",
    "pymongo==4.6.3",
    "psycopg2-binary>=2.9.10",
    "python-engineio==4.9.0",
    "python-socketio==5.11.2",
    "requests==2.32.4",
    "requests-oauthlib==1.3.1",
    "simple-websocket==1.0.0",
    "sqlalchemy==2.0.30",
    "typing-extensions>=4.13.1",
    "urllib3==2.5.0",
    "werkzeug==3.0.6",
    "wsproto==1.2.0",
    "yarl>=1.18.3",
    "zipp==3.19.1",
    "python-dotenv>=1.1.0",
    "google-auth>=2.38.0",
    "google-api-python-client>=2.166.0",
    "selenium>=4.31.0",
    "gspread>=6.2.0",
    "oauth2client>=4.1.3",
    "webdriver-manager==4.0.2",
    "cryptography>=44.0.2",
    "gunicorn==23.0.0",
    "notion-client>=2.3.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-core>=2.11.0",
    "sentry-sdk[flask]>=1.0.0",
    "pytz>=2025.2",
    "python-dateutil>=2.9.0.post0",
    "apscheduler>=3.11.0",
    "google-genai>=1.14.0",
    "dateparser>=1.2.1",
    "google-generativeai>=0.8.5",
    "tzdata>=2025.2",
    "timefhuman>=0.0.5",
    "colorlog>=6.9.0",
    "tenacity>=9.1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--verbose"

[tool.hatch.build.targets.wheel]
packages = ["modules"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
